--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.3.16",
